# xiaohongshu-mcp

./: .gitignore  CLAUDE.md  README.md  build.py  config.py  login.py  pyproject.toml  scraper.py  server.py  sign_server.py  start.py  test_all.py  utils.py  web_panel.py  xhs_client.py  xiaohongshu.spec
templates/: index.html
